# law-agent

./: .gitignore  IMPLEMENTATION_COMPLETE.md  README.md  SPEC.md  TASKS.yaml  requirements-definition-document2.md  requirements_identification.md  test_contract.json  test_contract.txt
backend/: .env  .env.example  .gitignore  SETUP_INSTRUCTIONS.md  law_rag.db  pyproject.toml  recreate_db.sh
backend/app/: __init__.py  audit.py  auth.py  chunking.py  cli_eval.py  config.py  database.py  embeddings.py  entity_extraction.py  extraction.py  graph.py  llm.py  logging.py  main.py  models.py  prompts.py  retrieval.py  workflow.py
backend/storage/documents/matter-1/: 900e1506-3a79-421f-bf0f-b44eacfbd68e.docx
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_chunking.py  test_config.py  test_embeddings.py  test_entity_extraction.py  test_eval.py  test_graph.py  test_health.py  test_ingestion.py  test_llm.py  test_logging.py  test_retrieval.py  test_vector_search.py  test_workflow.py
eval/: golden_set.jsonl  thresholds.yaml
frontend/: next.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/query/: page.tsx
frontend/src/lib/: api.ts
infra/: compose.yaml
